[package]
name = "markdown-editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
arboard = "3.4.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[[bin]]
name = "markdown-editor"
path = "src/main.rs"
